# sampleproject

./: generate_testdata.py  pyproject.toml  pytest.ini  readme.md  requirements.txt
reports/: samplereport.html
tests/: conftest.py  constants.py  utils.py
tests/features/: createBooking.feature  deleteBooking.feature  readBooking.feature  updateBooking.feature
tests/resources/: testdata.json
tests/steps/: test_createbooking.py  test_deleteBooking.py  test_readbooking.py  test_updatebooking.py
